--- a/TreeManager/en.lproj/MainWindow.xib
+++ b/TreeManager/en.lproj/MainWindow.xib
@@ -39,8 +39,6 @@
 				<int key="NSvFlags">292</int>
 				<string key="NSFrameSize">{768, 1024}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MSAxIDEAA</bytes>
@@ -107,6 +105,7 @@
 					</array>
 				</object>
 				<object class="IBUIViewController" key="IBUIDetailViewController" id="23693665">
+					<string key="IBUITitle">Random Inserts</string>
 					<reference key="IBUIToolbarItems" ref="0"/>
 					<reference key="IBUIParentViewController" ref="1001026670"/>
 					<string key="IBUINibName">RandomInsertsView</string>
@@ -139,22 +138,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">splitViewController</string>
-						<reference key="source" ref="963208320"/>
-						<reference key="destination" ref="1001026670"/>
-					</object>
-					<int key="connectionID">43</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">rootViewController</string>
-						<reference key="source" ref="963208320"/>
-						<reference key="destination" ref="720143809"/>
-					</object>
-					<int key="connectionID">44</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">detailViewController</string>
 						<reference key="source" ref="963208320"/>
 						<reference key="destination" ref="23693665"/>
@@ -163,19 +146,27 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">detailViewController</string>
-						<reference key="source" ref="720143809"/>
-						<reference key="destination" ref="23693665"/>
+						<string key="label">splitViewController</string>
+						<reference key="source" ref="963208320"/>
+						<reference key="destination" ref="1001026670"/>
 					</object>
-					<int key="connectionID">46</int>
+					<int key="connectionID">50</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
 						<reference key="source" ref="1001026670"/>
-						<reference key="destination" ref="23693665"/>
+						<reference key="destination" ref="720143809"/>
 					</object>
-					<int key="connectionID">49</int>
+					<int key="connectionID">55</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">splitViewController</string>
+						<reference key="source" ref="720143809"/>
+						<reference key="destination" ref="1001026670"/>
+					</object>
+					<int key="connectionID">56</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -215,6 +206,7 @@
 							<reference ref="23693665"/>
 						</array>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">Split View Controller</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">38</int>
@@ -229,6 +221,7 @@
 						<int key="objectID">39</int>
 						<reference key="object" ref="23693665"/>
 						<reference key="parent" ref="1001026670"/>
+						<string key="objectName">UIViewController</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">40</int>
@@ -271,7 +264,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">49</int>
+			<int key="maxID">56</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -290,14 +283,24 @@
 						</object>
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="detailDescriptionLabel">UILabel</string>
+						<string key="maxChildNodes">UITextField</string>
+						<string key="maxDepth">UITextField</string>
+						<string key="maxRootNodes">UITextField</string>
 						<string key="tableView">UITableView</string>
 						<string key="toolbar">UIToolbar</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="detailDescriptionLabel">
-							<string key="name">detailDescriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
+						<object class="IBToOneOutletInfo" key="maxChildNodes">
+							<string key="name">maxChildNodes</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="maxDepth">
+							<string key="name">maxDepth</string>
+							<string key="candidateClassName">UITextField</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="maxRootNodes">
+							<string key="name">maxRootNodes</string>
+							<string key="candidateClassName">UITextField</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="tableView">
 							<string key="name">tableView</string>
@@ -317,14 +320,14 @@
 					<string key="className">RootViewController</string>
 					<string key="superclassName">UITableViewController</string>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">detailViewController</string>
-						<string key="NS.object.0">RandomInsertsViewController</string>
+						<string key="NS.key.0">splitViewController</string>
+						<string key="NS.object.0">UISplitViewController</string>
 					</object>
 					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">detailViewController</string>
+						<string key="NS.key.0">splitViewController</string>
 						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">detailViewController</string>
-							<string key="candidateClassName">RandomInsertsViewController</string>
+							<string key="name">splitViewController</string>
+							<string key="candidateClassName">UISplitViewController</string>
 						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
